--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@
   --size-900: 5rem;
 }
 
-@media (min-width: 50em) {
+@media (min-width: 47em) {
   :root {
     --fs-body: var(--fs-500);
     --fs-primary-heading: var(--fs-900);
@@ -54,7 +54,7 @@
   }
 }
 
-// https://piccalil.li/blog/a-modern-css-reset
+/* // https://piccalil.li/blog/a-modern-css-reset */
 
 /* Box sizing rules */
 *,
@@ -211,11 +211,17 @@ p[data-width="wide"] {
   color: var(--clr-accent-400);
 }
 
-@media (max-width: 50em) {
+@media (max-width: 47em) {
+  .primary-header[data-overlay] {
+    position: relative;
+    z-index: 999;
+  }
+
   .primary-navigation {
     display: none;
 
     position: fixed;
+    z-index: 999;
     padding: var(--size-700);
     inset: 7rem var(--size-400) auto;
     max-width: 25rem;
@@ -244,6 +250,10 @@ p[data-width="wide"] {
     display: block;
   }
 
+  .mobile-nav-toggle[aria-expanded="true"] {
+    background-image: url("images/icon-close.svg");
+  }
+
   .mobile-nav-toggle {
     display: block;
     position: fixed;
@@ -253,6 +263,13 @@ p[data-width="wide"] {
     background: transparent;
     border: 0;
     padding: 0.5em;
+    width: 1.65em;
+    aspect-ratio: 1;
+
+    background-image: url(images/icon-hamburger.svg );
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
   }
 
   .mobile-nav-toggle .icon-close {
@@ -266,59 +283,62 @@ p[data-width="wide"] {
   --logo-color: var(--clr-neutral-100);
 }
 
-.primary-footer-wrapper {
+.primary-footer__wrapper {
   display: grid;
   gap: var(--size-700);
+  justify-content: center;
   grid-template-areas:
     "form"
     "nav"
-    "logo-social";
+    "social"
+    "logo"
+    "copyright";
 }
 
-.primary-footer-logo-social {
-  grid-area: logo-social;
-
-  display: flex;
-  flex-direction: column-reverse;
-  align-items: center;
-  gap: var(--size-700);
+.primary-footer__logo {
+  grid-area: logo;
 }
 
-.primary-footer-nav {
-  grid-area: nav;
-}
-
-.primary-footer-form {
+.primary-footer__form {
   grid-area: form;
 
-  display: grid;
-  align-content: space-between;
-}
-
-.primary-footer form {
   display: flex;
   gap: var(--size-200);
+}
+
+.primary-footer__copyright {
+  grid-area: copyright;
+  opacity: 0.7;
+  text-align: center;
+}
+
+.primary-footer__nav-wrapper {
+  grid-area: nav;
+  margin-inline: auto;
 }
 
 input:where([type="text"], [type="email"], ) {
   border-radius: 100vw;
   border: 0;
-  padding: var(--size-300) var(--size-400);
+  padding: var(--size-300) var(--size-500);
+  width: max(100%, 14rem);
 }
 
-@media (min-width: 50em) {
-  .primary-footer-wrapper {
-    grid-template-areas: "logo-social nav form";
+@media (min-width: 47em) {
+  .primary-footer__wrapper {
+    grid-template-areas: 
+    "logo nav form"
+    "social nav copyright"
+    ;
+    grid-template-columns: min-content 1fr auto;
   }
 
-  .primary-footer-logo-social {
-    align-items: flex-start;
-    justify-content: space-between;
-    gap: var(--size-700);
+  .primary-footer__copyright {
+    text-align: right;
   }
 }
 
-@media (max-width: 50em) {
+@media (max-width: 47em) {
   .primary-footer-wrapper > * {
     margin-inline: auto;
   }
@@ -328,7 +348,7 @@ input:where([type="text"], [type="email"], ) {
 
 .footer-nav {
   columns: 2;
-  gap: clamp(var(--size-200), 30vw, var(--size-900));
+  gap: clamp(4rem, 10vw, 7rem);
 }
 
 .footer-nav a {
@@ -353,6 +373,16 @@ input:where([type="text"], [type="email"], ) {
   fill: var(--clr-neutral-100);
 }
 
+@media(min-width:47em) {
+  .social-list {
+  gap: var(--size-300);
+  }
+  .social-icon {
+    width: var(--size-500);
+    max-width: revert;
+  }
+}
+
 .social-list a:is(:hover, :focus) .social-icon {
   fill: var(--clr-accent-400);
 }
@@ -365,7 +395,7 @@ input:where([type="text"], [type="email"], ) {
   text-align: center;
 }
 
-@media (min-width: 50em) {
+@media (min-width: 47em) {
   .cta {
     text-align: left;
   }
@@ -483,7 +513,7 @@ input:where([type="text"], [type="email"], ) {
   }
 }
 
-@media (min-width: 50em) {
+@media (min-width: 47em) {
   .slider > * {
     width: 35%;
   }
@@ -529,6 +559,62 @@ input:where([type="text"], [type="email"], ) {
   background: var(--clr-accent-400);
 }
 
+/* Hero */
+
+
+@media (max-width: 47em) {
+  .hero__image {
+    order: -1;
+  }
+}
+
+.hero__image::before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  right: 0;
+  top: 0;
+  width: 87%;
+  max-height: 70vh;
+  max-height: 70dvh;
+  aspect-ratio: 1 / 1.2;
+  background-image: url(images/bg-tablet-pattern.svg);
+  background-repeat: no-repeat;
+  background-position: bottom left;
+}
+
+@media (min-width: 47em) {
+  .hero__image::before {
+    width: 45%;
+  }
+}
+
+/* sale points */
+
+.sale-points__blob {
+  position: relative;
+}
+
+.sale-points__blob::before {
+  content: url(images/bg-tablet-pattern.svg);
+  zoom: 40%;
+  position: absolute;
+  z-index: -1;
+  left: 70%;
+  bottom: 120%;
+  width: 100px;  
+}
+
+
+@media (min-width: 47em) {
+  .sale-points__blob::before {
+  zoom: 70%;
+  z-index: -1;
+  left: -500px;
+  top: 42%;
+  width: 100px;  
+}
+}
 /* Utility classes */
 
 .visually-hidden {
@@ -556,7 +642,7 @@ input:where([type="text"], [type="email"], ) {
   gap: 1rem;
 }
 
-@media (min-width: 50em) {
+@media (min-width: 47em) {
   .even-columns {
     grid-auto-flow: column;
     grid-auto-columns: 1fr;
@@ -571,7 +657,7 @@ input:where([type="text"], [type="email"], ) {
   justify-self: end;
 }
 
-@media (min-width: 50em) {
+@media (min-width: 47em) {
   .justify-self-end-md {
     justify-self: end;
   }
@@ -589,7 +675,7 @@ input:where([type="text"], [type="email"], ) {
   margin-inline: auto;
 }
 
-@media (max-width: 50em) {
+@media (max-width: 47em) {
   .text-center-sm-only {
     text-align: center;
   }
@@ -674,11 +760,19 @@ input:where([type="text"], [type="email"], ) {
   margin-block-end: var(--size-700);
 }
 
+.margin-top-900 {
+  margin-block-start: var(--size-900);
+}
+
+.mx-auto {
+  margin-inline: auto;
+}
+
 .display-sm-none {
   display: none;
 }
 
-@media (min-width: 50em) {
+@media (min-width: 47em) {
   .display-md-inline-flex {
     display: inline-flex;
   }
